# ecoai-efficiency

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COMPETITIVE_ANALYSIS.md
docs/paper/: PAPER_PLAN.md  README.md  main.tex  references.bib
examples/: basic_usage.py
experiments/: README.md  benchmark_extended.py  benchmark_models.py  quick_demo.py  requirements.txt
experiments/results/: benchmark_results_20260201_152401.json  benchmark_results_20260201_152508.json  results_table_20260201_152401.md  results_table_20260201_152401.tex  results_table_20260201_152508.md  results_table_20260201_152508.tex
src/ai_efficiency/: __init__.py  academic.py  carbon.py  cli.py  compare.py  constants.py  measure.py  report.py  sci.py
tests/: __init__.py  test_academic.py  test_carbon.py  test_measure.py  test_sci.py
