[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-efficiency"
version = "0.2.0"
description = "Measure the energy efficiency of any AI model. One number. No excuses."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EcoAI Lab", email = "sangkeum@hanbat.ac.kr"}
]
maintainers = [
    {name = "Sangkeum Lee", email = "sangkeum@hanbat.ac.kr"}
]
keywords = [
    "ai",
    "efficiency",
    "energy",
    "carbon",
    "sustainability",
    "green-ai",
    "machine-learning",
    "deep-learning",
    "mlops",
    "carbon-footprint",
    "power-consumption",
    "gpu",
    "inference"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Power (UPS)",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
tensorflow = ["tensorflow>=2.4.0"]
sklearn = ["scikit-learn>=0.24.0"]
all = [
    "torch>=1.9.0",
    "tensorflow>=2.4.0",
    "scikit-learn>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-efficiency = "ai_efficiency.cli:main"

[project.urls]
Homepage = "https://github.com/ecoailab/ai-efficiency"
Documentation = "https://github.com/ecoailab/ai-efficiency#readme"
Repository = "https://github.com/ecoailab/ai-efficiency.git"
Issues = "https://github.com/ecoailab/ai-efficiency/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ai_efficiency"
